# India-Runs-Hackathon-Project

./: .gitignore  Dockerfile  README.md  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml  team_ehsaan.csv
backend/: main.py  schemas.py
backend/services/: embeddings.py  honeypot.py  jd_parser.py  llm_ranker.py  ranking_engine.py  schema.py  validator.py
frontend/: app.py
frontend/static/: styles.css
