[project]
name = "india-runs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "groq==0.11.0",
    "httpx==0.27.2",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.32.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers==3.1.1",
    "streamlit==1.39.0",
    "uvicorn[standard]==0.30.6",
]
